Remove HTML brick div

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>BLÖKZ Game</title>
 </head>
 <body>
-    <div class="grid">
-        <div class="brick"></div>
-    </div>
+    <div class="grid"></div>
     
     <script src="assets/js/script.js"></script>
 </body>
