Add 'startGame()' and Start button html

--- a/index.html
+++ b/index.html
@@ -13,13 +13,34 @@
 <body>
     <header>
         <h1 class="title" >BLÖKZ <i class="fa-solid fa-cubes"></i></h1>
-        <h2 class="title" >Retro Arcade</h2>
+        <h2 class="tagline" >Retro Arcade</h2>
         <p class="score-text"> Score: <a id="score">0</a></p>
+        <div id="start-screen" class="start">
+            <button onclick="startGame()" class="start-button"><i class="fa-solid fa-play"></i></button>
+        </div>
     </header> 
-    <div class="grid"></div>
-
+        <div class="grid"></div>
+        
+        
     <footer>
-
+        <div class="socials">
+            <ul class="social-media">
+                <li>
+                    <a href="https://www.facebook.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (Opens a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Instagram page (Opens a new tab)"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Twitter feed (Opens a new tab)"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+            </ul>
+        </div>
+        <p class="copyright">BLÖKZ© 2023</p>
     </footer>
 </body>
 <script src="https://kit.fontawesome.com/75b57bf907.js" crossorigin="anonymous"></script>
