Add 'removeEventLister' to stop movemove at GO/Win

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
 <body>
     <header>
-        <h1 class="title" >BLÖKZ <i class="fa-solid fa-cubes"></i></h1>
-        <h2 class="tagline" >Retro Arcade</h2>
+        <h1 class="title" >BLÖKZ <i class="fa-solid fa-cubes"> </i></h1>
+        <h2 class="tagline">Retro Arcade</h2>
+        <br>
         <p class="score-text"> Score: <a id="score">0</a></p>
-        <div id="start-screen" class="start">
+        <div id="start" class="start">
             <button onclick="startGame()" class="start-button"><i class="fa-solid fa-play"></i></button>
         </div>
     </header> 
