--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 
     <div id="game-area">
         <div class="grid"></div>
+        <div id="controls">
+            <div id="left-control">
+                <i class="fa-solid fa-arrow-left"></i>
+            </div>
+            <div id="right-control">
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
+
+        </div>
     </div>
 
     <footer>
