Add 'moveLeft() & moveRight()'fucntionality

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
 
     <div id="game-area">
         <div class="grid"></div>
+        
         <div id="controls">
             <div id="left-control">
-                <i class="fa-solid fa-arrow-left"></i>
+                <button class="controls" onclick="moveLeft()"><i class="fa-solid fa-arrow-left"></i></button>
             </div>
             <div id="right-control">
-                <i class="fa-solid fa-arrow-right"></i>
+                <button class="controls" onclick="moveRight()"><i class="fa-solid fa-arrow-right"></i></button>
             </div>
 
         </div>
