Add button names in html to improve accesibility

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     </header>
     <div id="start" class="start">
-        <button onclick="startGame()" class="start-button">Play <i class="fa-solid fa-play"></i></button>
+        <button name="start-button" onclick="startGame()" class="start-button">Play <i class="fa-solid fa-play"></i></button>
     </div>
     <div id="reset" class="reset">
-        <button onclick="resetGame()" class="reset-button" >Reset <i
+        <button name="reset-button" onclick="resetGame()" class="reset-button" >Reset <i
                 class="fa-solid fa-arrow-rotate-left"></i></button>
     </div>
 
@@ -31,10 +31,10 @@
         
         <div id="controls">
             <div id="left-control">
-                <button class="controls" onclick="moveLeft()"><i class="fa-solid fa-arrow-left"></i></button>
+                <button name="left-control" class="controls" onclick="moveLeft()"><i class="fa-solid fa-arrow-left"></i></button>
             </div>
             <div id="right-control">
-                <button class="controls" onclick="moveRight()"><i class="fa-solid fa-arrow-right"></i></button>
+                <button name="right-control" class="controls" onclick="moveRight()"><i class="fa-solid fa-arrow-right"></i></button>
             </div>
 
         </div>
