Add meta description, images added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Retro Game based on the 1976 classic">
+    <meta name="description" content="Author: Jonny Davison">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>BLÖKZ GAME</title>
     <!-- ADD Favicon <link rel="icon" type="image/x-icon" href="/images/favicon.ico">  -->
@@ -15,7 +17,7 @@
         <h1 class="title">BLÖKZ <i class="fa-solid fa-cubes"> </i></h1>
         <h2 class="tagline">Retro Arcade</h2>
         <br>
-        <p class="score-text"> Score: <a id="score">0</a></p>
+        <p class="score-text"> Score: <a href="scores" id="score">0</a></p>
 
     </header>
     <div id="start" class="start">
